--- a/EjecucionNomina/Modules/Home/View/HomeViewController.xib
+++ b/EjecucionNomina/Modules/Home/View/HomeViewController.xib
@@ -1,22 +1,95 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="EjecucionNomina" customModuleProvider="target">
             <connections>
+                <outlet property="addDepartment" destination="YIk-g2-PBB" id="CMl-Nj-aiS"/>
+                <outlet property="addStaff" destination="NVA-c4-M7C" id="Cyk-ID-MuJ"/>
+                <outlet property="staffButton" destination="SaC-6S-Zgt" id="u0o-sz-cDi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="trabajo" translatesAutoresizingMaskIntoConstraints="NO" id="VDp-uB-5FD">
+                    <rect key="frame" x="0.0" y="572" width="414" height="290"/>
+                    <constraints>
+                        <constraint firstAttribute="height" secondItem="VDp-uB-5FD" secondAttribute="width" multiplier="0.7" id="trP-yo-xGm"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SaC-6S-Zgt">
+                    <rect key="frame" x="52" y="348" width="310.5" height="46.5"/>
+                    <color key="backgroundColor" red="0.91980725529999996" green="0.41112484539999999" blue="0.23879369650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" secondItem="SaC-6S-Zgt" secondAttribute="width" multiplier="0.15" id="ktI-QW-ZRR"/>
+                    </constraints>
+                    <state key="normal" title="Empleados">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onClickGoStaff:" destination="-1" eventType="touchUpInside" id="Axx-ks-uiu"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIk-g2-PBB">
+                    <rect key="frame" x="52" y="434.5" width="310.5" height="47"/>
+                    <color key="backgroundColor" red="0.91980725526809692" green="0.41112484537802552" blue="0.23879369648784271" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" secondItem="YIk-g2-PBB" secondAttribute="width" multiplier="0.15" id="WmZ-hA-WL1"/>
+                    </constraints>
+                    <state key="normal" title="Departamentos">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onClickAddDepartments:" destination="-1" eventType="touchUpInside" id="gLi-BI-zMy"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NVA-c4-M7C">
+                    <rect key="frame" x="52" y="261.5" width="310.5" height="46.5"/>
+                    <color key="backgroundColor" red="0.91980725529999996" green="0.41112484539999999" blue="0.23879369650000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" secondItem="NVA-c4-M7C" secondAttribute="width" multiplier="0.15" id="s5k-ag-sH4"/>
+                    </constraints>
+                    <state key="normal" title="Agregar Empleado">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="onClickAddStaff:" destination="-1" eventType="touchUpInside" id="jwZ-JW-Dpe"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="YIk-g2-PBB" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="10" id="480-k6-sdE"/>
+                <constraint firstItem="SaC-6S-Zgt" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.75" id="7IF-7b-Gnk"/>
+                <constraint firstItem="YIk-g2-PBB" firstAttribute="centerX" secondItem="SaC-6S-Zgt" secondAttribute="centerX" id="EMG-yG-h85"/>
+                <constraint firstItem="NVA-c4-M7C" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.75" id="F8e-bf-imN"/>
+                <constraint firstItem="SaC-6S-Zgt" firstAttribute="centerX" secondItem="NVA-c4-M7C" secondAttribute="centerX" id="KXK-Zx-m1U"/>
+                <constraint firstItem="YIk-g2-PBB" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.75" id="SDe-4p-xhW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="VDp-uB-5FD" secondAttribute="bottom" id="XBK-jj-mqb"/>
+                <constraint firstItem="YIk-g2-PBB" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bPm-8Q-sUv"/>
+                <constraint firstItem="SaC-6S-Zgt" firstAttribute="top" secondItem="NVA-c4-M7C" secondAttribute="bottom" constant="40" id="h7v-tp-znE"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VDp-uB-5FD" secondAttribute="trailing" id="lzc-ee-q6B"/>
+                <constraint firstItem="YIk-g2-PBB" firstAttribute="top" secondItem="SaC-6S-Zgt" secondAttribute="bottom" constant="40" id="rMm-YC-Ggk"/>
+                <constraint firstItem="VDp-uB-5FD" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="suT-pN-vKe"/>
+            </constraints>
+            <point key="canvasLocation" x="139" y="85"/>
         </view>
     </objects>
+    <resources>
+        <image name="trabajo" width="425" height="360"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
