--- a/EjecucionNomina/Modules/Staff/View/StaffViewController.xib
+++ b/EjecucionNomina/Modules/Staff/View/StaffViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="StaffViewController" customModule="EjecucionNomina" customModuleProvider="target">
             <connections>
+                <outlet property="staffDataTable" destination="DHW-Pb-Dg2" id="fA4-gH-ctj"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
